# FEI

./: README.md
All/AVL/: AVL.h  NodeAVL.h
All/Core/: BaseNode.h
All/Hash/: HashItem.h
All/LDE/: LinkedList.h  Node.h
All/LES/: les.cpp
All/SequencialStack/: Stack.h
ArqComp/Railway-GateControl/: railway.s51
Cstudy/: bubblesort.c  funcao_ponteiro.c  funcao_ponteiro2.c  pontos.c  recursao.c  struct_2.c  teste.txt  typedef_struct_unions.c  usando_ponteiros.c
DataStructure/: CMakeLists.txt  main.cpp
DataStructure/Graph/: Graph.h
DataStructure/Hash/: HashTable.h  HashTableCollision.h
DataStructure/Heap/: PriorityQueue.h
DataStructure/LDDE/: DoublyLinkedList.h  NodeDoubly.h
DataStructure/LES/: les.h
DataStructure/Queue/: CircularQueue.h  LinkedQueue.h  NodeQueue.h
DataStructure/Tree/: NodeTree.h  Tree.h
FinanceApp/: build.gradle
FinanceApp/app/: build.gradle
FinanceApp/app/src/androidTest/java/com/ealvarenga/financeapp/: ExampleInstrumentedTest.java
FinanceApp/app/src/main/: AndroidManifest.xml
FinanceApp/app/src/main/java/com/ealvarenga/financeapp/DAO/: BaseDAO.java  TaskDAO.java  (+1 more)
FinanceApp/app/src/main/res/drawable/: background_gradient.xml  btn_background.xml
FinanceApp/app/src/main/res/layout/: login.xml  signup_form.xml  task_form.xml  task_list.xml  task_list_item.xml
FinanceApp/app/src/main/res/menu/: main_menu.xml
FinanceApp/app/src/main/res/values/: colors.xml  strings.xml  styles.xml
FinanceApp/app/src/test/java/com/ealvarenga/financeapp/: ExampleUnitTest.java
FinanceApp/gradle/wrapper/: gradle-wrapper.properties
(+11 files in other folders)
